--- a/dswebapi.csproj
+++ b/dswebapi.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
+    <PackageReference Include="NETCore.Encrypt" Version="2.0.9" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="sqlSugarCore" Version="5.0.1.3" />
   </ItemGroup>
