--- a/dswebapi.csproj
+++ b/dswebapi.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>834fcd94-4f05-48d0-871c-3059904f91c2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
