--- a/dswebapi.csproj
+++ b/dswebapi.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>834fcd94-4f05-48d0-871c-3059904f91c2</UserSecretsId>
+    <StartupObject>dswebapi.Program</StartupObject>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningLevel>1</WarningLevel>
   </PropertyGroup>
 
   <ItemGroup>
