新增了UJSON的方法 更改了DEVICE控制器的方法

--- a/dswebapi.csproj
+++ b/dswebapi.csproj
@@ -20,5 +20,9 @@
     <PackageReference Include="sqlSugarCore" Version="5.0.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="新文件夹\" />
+  </ItemGroup>
+
 
 </Project>
