--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -25,7 +25,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "nativeDebugging": true,
+      "nativeDebugging": false,
       "applicationUrl": "http://localhost:5000"
     }
   }
