--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     },
     "dswebapi": {
       "commandName": "Project",
-      "workingDirectory": "D:\\gitcode\\dswebapi\\bin\\Debug",
+      "workingDirectory": "",
       "launchBrowser": true,
       "launchUrl": "api/test/get",
       "environmentVariables": {
